@@ -7,18 +7,20 @@ DIST gupnp-av-0.5.7.tar.gz 408293 RMD160 ba0a77e04f0b512dabc21d187a076dab4787320
 DIST gupnp-av-0.6.1.tar.gz 408227 RMD160 07e4ad59db9ba8648cdbd0abbab1846413755672 SHA1 c41a278d6b20a2823cf8dfb72c094c507dfaefce SHA256 b636e3aa8af3e43103a812b45e41045180f793ef15371ef7b13c0dfc3b2135f2
 DIST gupnp-av-0.6.3.tar.gz 409380 RMD160 3a81bddd89c27fb623eb3557b68b84ff7b1c439f SHA1 28238d7b6c5f6cbacd218220cafa100b97dabbaf SHA256 bbc75e5c8e4651e6a681776f8215a114d49a65daac8d91becf56c256dd1416af
 DIST gupnp-av-0.7.1.tar.gz 410605 RMD160 8af10b87979f456015651dd6a77691804a757313 SHA1 fcfd29ab3321c25b0c3498bc975706f0b12fe245 SHA256 70a23a7dd1e33b08e87a2f005bd8e1aa4e231524dd41b6a8eff9dc03112e6f19
+DIST gupnp-av-0.8.0.tar.gz 407464 RMD160 82e89f1a8d31fba44ca85d0cc6330c4f689dc5a3 SHA1 c623b886b45e25b41ce528e08a64fd499ca31037 SHA256 e6aa032377488cedc4e347519bd30701c583780b7c54f00bab083f2316a93dc9
 EBUILD gupnp-av-0.4.1.ebuild 759 RMD160 57e7ad848e9c12b653a8513a9b818027295ed90d SHA1 7ee057720804edc71821167cc11f982be64626b4 SHA256 1360e9c9942439972ff2375ea56ce4c8801f9c877209bc53b84d3d98d705fd14
 EBUILD gupnp-av-0.5.2.ebuild 796 RMD160 2b3eec7af06f27f412ce16191c54c87b70c1dedb SHA1 82dbe1237ed324c4d905e9902b615942bd99ecba SHA256 f8a43a230b4d97e9d2c382d43908dc1ba30bbaf0e149d697a9f007a0c68c7102
 EBUILD gupnp-av-0.5.7.ebuild 861 RMD160 185ece3449575ace46c9c7feefb5cf2e0594541b SHA1 0bac156250bcc781191c2a6147510fd3579c3de4 SHA256 f258723da68fe5cff5f49380866f705e781c95538fc5f9ed5ef8cda4a4fa4756
 EBUILD gupnp-av-0.6.1.ebuild 871 RMD160 b99b22aa66076a7270a1dc192aa12935e224ab27 SHA1 23a6064f2db452414a9a539c5050277c7da3f253 SHA256 d2c4a50a1e4b55dcbc76e80581b575cb4388cdea93385d9f3c1e66c3c60e8757
 EBUILD gupnp-av-0.6.3.ebuild 930 RMD160 0c34437433db16051f70e0513838f1a348224c28 SHA1 3e4e130e62a10da4d688f9f9658d0f31ce1ccc4a SHA256 0569e72d8f0fe587051d7ab05abfcc349601cdc0d42aa351a698305444214982
 EBUILD gupnp-av-0.7.1.ebuild 958 RMD160 7e9b6ec0b2f331306aea1e9165768e56c8c3c1ff SHA1 d5115310be9cbc5c12ed8059f57e0ca5e16b6b5c SHA256 1e9afa5c4bee022f6784b851e84cb641eea5380741a5f2d4f1311bf147d65bb5
-MISC ChangeLog 1832 RMD160 c81763d45c511bfffb84d2223f4b67e0a9206b17 SHA1 a623c6ac7ae764433a53149bf657945c881de4c2 SHA256 0a98c53f837a75e3fc22068b7877e7259f47d1ee5ee2d0113213bb7470f5a4f1
+EBUILD gupnp-av-0.8.0.ebuild 1019 RMD160 71a66318caa7f335c88cdcb2f9a4ad5c16b89673 SHA1 66db76963649411699c791174f8f98d46a7b5df7 SHA256 5fb888ea0b6fe5ca314e50bc665c789cb9bf6d2ebd57525c908b513ba57ba734
+MISC ChangeLog 2026 RMD160 09b03795bcbfc310d1e2f12e5fa4fee5abfe434c SHA1 4c5557da28f8c175f12a6a6d3caccc2555458a00 SHA256 8bd0d764e580d222b304a001fb6b4e561a3abeff659deb7025b64ac87994f323
 MISC metadata.xml 279 RMD160 6c7f595da5fa456836c66f1a13ff0b72004b14cb SHA1 7362918c61feaaed2bc27d534edc0013a3b06bc6 SHA256 0e9fff6ece2b698fa3df0dd3415cb47ff07d9475c4f0e429ba625fb50d9ec2ff
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEARECAAYFAk1kMkgACgkQ1fmVwcYIWAYpzgCfWY7VFm95SpshBrK5GQnmlDVX
-Iq8AoKRf03FYBWPGD5faI2L588wwQ9Kw
-=mTEP
+iEYEARECAAYFAk4sMRgACgkQ1fmVwcYIWAb98ACffopWjdKlTOzqNDC+NOyn9zLC
+LO4AoINVqMaeBUCODGnnBj+c7X4vTcdx
+=BgZG
 -----END PGP SIGNATURE-----
