@@ -1,0 +1,36 @@
+# Copyright 1999-2011 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/net-libs/gupnp-av/gupnp-av-0.8.0.ebuild,v 1.1 2011/07/24 14:49:55 eva Exp $
+
+EAPI=3
+
+DESCRIPTION="a small utility library that aims to ease the handling UPnP A/V profiles."
+HOMEPAGE="http://gupnp.org/"
+SRC_URI="http://gupnp.org/sites/all/files/sources/${P}.tar.gz"
+
+LICENSE="LGPL-2"
+SLOT="0"
+KEYWORDS="~amd64 ~ppc ~x86"
+IUSE="+introspection"
+
+RDEPEND=">=dev-libs/glib-2.16:2
+	>=net-libs/gupnp-0.13[introspection?]
+	introspection? ( >=dev-libs/gobject-introspection-0.9.5 )"
+DEPEND="${RDEPEND}
+	dev-util/pkgconfig"
+
+src_configure() {
+	econf \
+	    $(use_enable introspection) \
+		--disable-dependency-tracking \
+		--disable-static
+		--disable-gtk-doc \
+		--disable-gtk-doc-html \
+		--disable-gtk-doc-pdf
+}
+
+src_install() {
+	emake DESTDIR="${D}" install || die "emake failed"
+	dodoc AUTHORS ChangeLog NEWS README || die "dodoc failed"
+	find "${D}" -type f -name "*.la" -delete
+}
