@@ -1,6 +1,12 @@
 # ChangeLog for net-libs/gupnp-av
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/gupnp-av/ChangeLog,v 1.11 2011/02/22 22:01:33 eva Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/gupnp-av/ChangeLog,v 1.12 2011/07/24 14:49:55 eva Exp $
+
+*gupnp-av-0.8.0 (24 Jul 2011)
+
+  24 Jul 2011; Gilles Dartiguelongue <eva@gentoo.org> +gupnp-av-0.8.0.ebuild:
+  Version bump. Fix XML node names for 'artist' and 'author'. Fix linking
+  issues.
 
 *gupnp-av-0.7.1 (22 Feb 2011)
 
